<resources>
    <string name="app_name">Clicker</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="achievements">Achievements</string>
    <string name="start_greeting">Welcome to Computer Clicker Game</string>
    <string name="shop">Shop</string>
    <string name="click_count">Click Count:</string>
    <string name="clicks_s">Clicks/s:</string>
    <string name="initial_clicks_count">0</string>
    <string name="initial_clicks_per_second">0</string>
    <string name="back">Back</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="exit_question">Are you sure you want to exit the app?</string>
    <string name="shop_label">SHOP</string>
    <string name="mouse">Mouse:</string>
    <string name="initial_mouse_price">10</string>
    <string name="initial_item_count">0</string>
    <string name="keyboard">Keyboard</string>
    <string name="initial_keyboard_price">100</string>
    <string name="programmer">Programmer</string>
    <string name="initial_programmer_price">5k</string>
    <string name="friends">Friends</string>
    <string name="initial_friends_price">80k</string>
    <string name="team">Team</string>
    <string name="initial_team_price">1M</string>
    <string name="company">Company</string>
    <string name="initial_company_price">50M</string>
    <string name="balance">Balance:</string>
    <string name="initial_shop_balance">0</string>
    <string name="computer_description">imac computer\n</string>
</resources>