<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/lightBlue"
    tools:context=".activities.StartScreenActivity">


    <ImageView
        android:id="@+id/ivStartScreen"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:paddingBottom="20dp"
        android:background="@color/backgroundBlue"
        android:src="@drawable/imac_main" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/backgroundBlue"
        android:padding="10dp"
        android:text="@string/start_greeting" />

    <Button
        android:id="@+id/btnStart"
        android:background="@drawable/ripple_effect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/lightBlue"
        android:textSize="26sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/start" />
    <Button
        android:id="@+id/btnAchievements"
        android:background="@drawable/ripple_effect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/lightBlue"
        android:textSize="26sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/achievements" />
    <Button
        android:id="@+id/btnExit"
        android:background="@drawable/ripple_effect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/lightBlue"
        android:textSize="26sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/exit" />

</LinearLayout>