<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackgroundBlue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/shopHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/shop_label"
        android:textColor="@color/lightBackgroundBlue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/itemBackground"
        app:layout_constraintTop_toBottomOf="@id/shopHead"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_effect"
        android:backgroundTint="@color/blue"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/back"
        android:textColor="@color/lightBackgroundBlue"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/balance"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/initial_shop_balance"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

</androidx.constraintlayout.widget.ConstraintLayout>