<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/itemBackground"
    android:padding="10dp">


    <ImageView
        android:id="@+id/itemIcon"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="10dp"
        tools:src="@drawable/mouse_icon_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:gravity="start|center"
        tools:text="@string/mouse"
        android:textColor="@color/darkBlue"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@id/itemIcon"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/itemCount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="start|center"
        tools:text="@string/initial_item_count"
        android:layout_marginStart="10dp"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/itemTitle"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:gravity="center|center"
        tools:text="@string/initial_mouse_price"
        android:textColor="@color/darkBlue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>